objects/State__c.object
<CustomObject>
    <fields>
        <fullName>Country_Name__c</fullName>
        <label>Country Name</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>States</relationshipLabel>
        <relationshipName>States</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Identification__c</fullName>
        <formula>Country_Name__r.Name + &apos;-&gt;&apos; + Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Identification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State_Code__c</fullName>
        <label>State Code</label>
        <length>8</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_District__c</fullName>
        <label>Total District</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>State</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>State_of_China</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Country_Name__c</field>
            <operation>equals</operation>
            <value>China</value>
        </filters>
        <label>State of China</label>
    </listViews>
    <listViews>
        <fullName>State_of_Japan</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Country_Name__c</field>
            <operation>equals</operation>
            <value>Japan</value>
        </filters>
        <label>State of Japan</label>
    </listViews>
    <listViews>
        <fullName>State_of_india</fullName>
        <columns>NAME</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Country_Name__c</field>
            <operation>equals</operation>
            <value>India</value>
        </filters>
        <label>State of india</label>
    </listViews>
    <nameField>
        <label>State  Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>States</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>